src/app/home/home.page.scss
ion-page {
  width: 100%;
}


.list-md {
  margin-top: 35px;
  margin-left: 5px;
  margin-right: 5px;
}


.sorting .close {
  //margin: 0;
  //padding: 3px 7px 0 0;
  //line-height: 6px;
  //font-size: 29px;
  //height: 27px;
}

.list-md {
  margin-top: 35px;
  margin-left: 5px;
  margin-right: 5px;
}

.sorting {
  position: fixed;
  width: 100%;
  display: flex;
  flex-wrap: nowrap;
  padding-inline: 20px;
  top: calc(50px + var(--ion-safe-area-top));
  left: 0;
  justify-content: space-evenly;
  align-items: center;

  > *:not(.spacer) {
    border: 1px solid gray;
    border-top: none;
  }

  .close {
    font-size: 29px;
    //  height: 29px;
    position: absolute;
    top: 7px;
    left: -6px;
    z-index: 33;
  }
}

.sortby {
  //position: fixed;
  //line-height: 32px;
  //height: 35px;
  background: #fff;
  padding: 0 5px;
  width: 189px;
  //height: 30px;
  border-radius: 0 0 7px 7px;
  flex-grow: 1;
  font-size: 14px;

  ion-label {
    flex: 0 1 65px;
  }

  ion-select {
    //--padding-start: 0;
    //--padding-end: 0;
    //--padding-top: 0;
    //--padding-bottom: 0;
  }

  .select-icon {
    position: relative;
    top: 10px;
    left: 10px;
  }
}

  .spacer {
    flex: 0 0 16px;
    border: none;
  }

  .search-btn {
    width: 40px;
    /* height: 35px; */
    text-align: center;
    padding: 3px 0;
    background-color: #fff;
    border-radius: 0 0 7px 7px;
    font-size: 27px;
    z-index: 999;
    display: flex;
    align-items: center;
    justify-content: center;
    align-self: stretch;
  }

  .sorting .open {
    //position: absolute;
    //z-index: 999;
    //right: calc(50% - 8px);
    font-size: 26px;
  }


  .sorting .mem-left {
    //width: 73px;
  }

  .mem-right {
    //float: right;
    //width: 195px;
    //box-sizing: border-box;
  }

  .mem-left {
    //float: right;
    //width: 73px;
    //font-size: 15px;
    //font-weight: normal;
    //line-height: 32px;
  }

  .test {
    --background: #ccc;
  }

  .card-md, .card-ios {
    background: #dbdbd2;
    box-shadow: none;
  }

  .list-ios {
    /*margin: 9px 0 32px 0;*/
  }

  .item-md, .item-ios {
    padding-left: 8px;
    position: relative;
  }

  .ion-list {
    //--background: #ccc;
    //  margin-top: 54px;
    //--background: #ccc;
    //height: 93%;
    //overflow: auto;
    //position: absolute;
    //bottom: 0;
    //width: 100%;
    --background: #ccc;
    /* margin-top: 54px; */
    /* height: 97%; */
    overflow: auto;
    /* position: absolute; */
    /* bottom: 4%; */
    width: 100%;
    /* margin: 50px 0; */
    margin: 10px 0 26px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
  }

.item-md:nth-child(odd), .item-ios:nth-child(odd) {
  padding-left: 0;
  padding-right: 8px;
}

.list-ios > .item-block:first-child {
  border-top: 0;
}

.open-div {
  height: 10px;
  //background-color: white;
  margin-bottom: 10px;
}

select-icon {
  display: none;
}

.ion-list {
  --background: #ccc;
  overflow: auto;
  bottom: 0;
  width: 100%;
  margin: 54px 0 70px;
  display: flex;
  flex-wrap: wrap;
}

.ios .ion-list{
  margin-top: 105px;
}


.online {
  top: 7px;
  right: 10px;
  height: 12px;
  width: 12px !important;
  background-color: #45d362;
  position: absolute;
  border-radius: 100%;
}

.card-md {
  width: calc(56% - 20px);
  float: left;
}

.card-ios {
  width: calc(55% - 23.6px);
  float: left;
}

.platform-ios .sorting .icon-ios {
  font-size: 1.8em;
}

.loader {
  margin: 0 auto;
  text-align: center;
  height: 35px;
  width: 70px;
  position: relative;
  bottom: 35px;
}

ion-card {
  float: right;
}

.row {
  background-color: black;
  color: white;
  display: flex;
}

.width3 {
  width: 33.33%;
}

.content-md, .content-ios {
  background-color: #dbdbd2;
}

.item-md.item-block .item-inner, .item-ios.item-block .item-inner {
  padding-right: 0;
}

.no_results {
  text-align: center;
  margin-top: 50px;
  font-size: 18px;
}

.label-md, .label-ios {
  margin-right: 0;
  margin-bottom: 0
}

.select-text {
  margin: -10px, 0;
}

//ion-select:before {
//  content: "edit";
//  width: 50px;
//  height: 30px;
//  position: absolute;
//  font-size: 0px;
//  top: 0px;
//  left: 0px;
//  z-index: 999;
//  background-color: #fff;
//  border-radius: 5px;
//}

//.ion-list {
//  position: relative;
//  bottom: 47px;
//  margin-top: 80px;
//}


ion-content {
  display: flex;
}

.container {
  //height: 80%;
  //position: absolute;
  //bottom: 0;
  //right: 0;
  //left: 0;
  //top: 45px;
  padding-top: calc(50px + var(--ion-safe-area-top) + 50px);
}

//.search-btn {
//  width: 40px;
//  height: 35px;
//  text-align: center;
//  padding: 3px 0;
//  background-color: #fff;
//  border-radius: 0 0 7px 7px;
//  display: inline-block;
//  font-size: 27px;
//  position: fixed;
//  top: 58px;
//  left: 13px;
//  z-index: 999;
//}

app-short-profile {
  width: 50%;
}

